--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
     <div class="demo">
-        <div class="demo-header">Sudoku (hi there, PyCon India!)</div>
+        <div class="demo-header">Sudoku</div>
         <div class="demo-content">
             <canvas id="canvas"></canvas>
         </div>
